<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="about_version"
        android:title="@string/about_version_title" />
    <Preference
        android:summary="© 2018, Taler Wallet developers"
        android:title="@string/about_copyright_title" />
    <Preference
        android:key="about_license"
        android:summary="https://www.gnu.org/licenses/gpl-3.0.txt"
        android:title="@string/about_license_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.gnu.org/licenses/gpl-3.0.txt" />
    </Preference>
    <Preference
        android:key="about_source"
        android:summary="https://github.com/bitcoin-wallet/bitcoin-wallet"
        android:title="@string/about_source_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/bitcoin-wallet/bitcoin-wallet" />
    </Preference>
    <Preference
        android:key="about_market_app"
        android:summary="@string/about_market_app_summary"
        android:title="@string/about_market_app_title" />
    <Preference
        android:key="about_faq"
        android:summary="@string/about_faq_summary"
        android:title="@string/about_faq_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://bitcoin.stackexchange.com/questions/tagged/taler-wallet-app" />
    </Preference>
    <Preference
        android:key="about_community_googleplus"
        android:summary="@string/about_community_googleplus_summary"
        android:title="@string/about_community_googleplus_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://t.me/TalerOfChat" />
    </Preference>
    <Preference
        android:key="about_twitter"
        android:summary="\@talerminsk"
        android:title="Twitter" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://twitter.com/talerminsk" />
    </Preference>

    <PreferenceCategory android:title="@string/about_category_credits" >
        <Preference
            android:key="about_credits_bitcoinj"
            android:summary="https://bitcoinj.github.io" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://bitcoinj.github.io" />
        </Preference>
        <Preference
            android:key="about_credits_zxing"
            android:summary="https://github.com/zxing/zxing"
            android:title="@string/about_credits_zxing_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/zxing/zxing" />
        </Preference>
        <Preference
            android:key="about_credits_scrypt"
            android:summary="https://github.com/wg/scrypt"
            android:title="@string/about_credits_scrypt_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/wg/scrypt" />
        </Preference>
        <Preference
            android:key="about_credits_schildbach"
            android:summary="https://github.com/bitcoin-wallet/bitcoin-wallet"
            android:title="@string/about_credits_schildbach_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/bitcoin-wallet/bitcoin-wallet" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>