<shortcuts xmlns:android="http://schemas.android.com/apk/res/android" >

    <shortcut
        android:icon="@drawable/shortcut_scan_qr"
        android:shortcutId="scan_qr"
        android:shortcutShortLabel="@string/button_scan" >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="xplatforms.taler.wallet.ui.SendCoinsQrActivity"
            android:targetPackage="xplatforms.taler.wallet" />
    </shortcut>
    <shortcut
        android:icon="@drawable/shortcut_send_coins"
        android:shortcutId="send_coins"
        android:shortcutShortLabel="@string/button_send_coins" >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="xplatforms.taler.wallet.ui.send.SendCoinsActivity"
            android:targetPackage="xplatforms.taler.wallet" />
    </shortcut>
    <shortcut
        android:icon="@drawable/shortcut_request_coins"
        android:shortcutId="request_coins"
        android:shortcutShortLabel="@string/button_request_coins" >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="xplatforms.taler.wallet.ui.RequestCoinsActivity"
            android:targetPackage="xplatforms.taler.wallet" />
    </shortcut>

</shortcuts>